--- a/client/app/base/base.html
+++ b/client/app/base/base.html
@@ -2,11 +2,13 @@
     <uib-tabset active="active" justified="true">
         <uib-tab
                 ng-repeat="page in BaseCtrl.pages"
-                ui-sref="{{ :: '/' + page.url }}"
+                ui-sref="{{ :: page.url }}"
                 index="$index + 1"
                 heading="{{:: page.name }}">
         </uib-tab>
-        <main ui-view></main>
     </uib-tabset>
+    <main-container>
+        <main ui-view></main>
+    </main-container>
 
 </div>
