--- a/client/dev.html
+++ b/client/dev.html
@@ -6,6 +6,8 @@
     <!--inject:css-->
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="app/base/base.css">
+    <link rel="stylesheet" href="app/pages/captcha/captcha.css">
+    <link rel="stylesheet" href="app/pages/credentials/credentials.css">
     <!--endinject-->
 </head>
 <body ng-app="base">
@@ -24,6 +26,8 @@
 <script src="app/pages/captcha/captcha.controller.js"></script>
 <script src="app/components/controls/controls.directive.js"></script>
 <script src="app/components/controls/controls.controller.js"></script>
+<script src="app/services/server.service.js"></script>
+<script src="app/base/user.value.js"></script>
 <script src="app/base/base.directive.js"></script>
 <script src="app/base/base.controller.js"></script>
 <script src="app/templates.js"></script>
