CHanged all requests to promises

--- a/client/app/pages/location/location.html
+++ b/client/app/pages/location/location.html
@@ -4,6 +4,7 @@
            typeahead-editable="false"
            typeahead-min-length="0"
            placeholder="Страна"
+           ng-change="LocationCtrl.updateCities(LocationCtrl.user.country)"
            ng-model="LocationCtrl.user.country"
            uib-typeahead="country as country.name for country in LocationCtrl.countries | filter:{name: $viewValue}">
 
@@ -16,6 +17,6 @@
            typeahead-min-length="0"
            placeholder="Город"
            ng-model="LocationCtrl.user.city"
-           uib-typeahead="city for city in LocationCtrl.getCities(LocationCtrl.user.country)  | filter:$viewValue">
+           uib-typeahead="city for city in LocationCtrl.cities  | filter:$viewValue">
     <span class="input__error-hint">Выберите со списка</span>
 </label>
