--- a/client/app/pages/final/final.html
+++ b/client/app/pages/final/final.html
@@ -1,1 +1,12 @@
-Credentials
+<div class="user-card">
+    <div class="user-card__data-container">
+        <title class="user-card__title"></title>
+        <div class="user-card__email"></div>
+        <div class="user-card__location"></div>
+        <div class="user-card__networks">
+            <span class="user-card__network-name"></span>
+            <span class="user-card__network-link"></span>
+        </div>
+    </div>
+    <div class="user-card__img"></div>
+</div>
