--- a/client/app/pages/final/final.html
+++ b/client/app/pages/final/final.html
@@ -1,12 +1,15 @@
 <div class="user-card">
     <div class="user-card__data-container">
-        <title class="user-card__title"></title>
-        <div class="user-card__email"></div>
-        <div class="user-card__location"></div>
-        <div class="user-card__networks">
-            <span class="user-card__network-name"></span>
-            <span class="user-card__network-link"></span>
+        <div class="user-card__title">{{FinalCtrl.user.name}}</div>
+        <div class="user-card__email">{{FinalCtrl.user.email}}</div>
+        <div class="user-card__location"
+         ng-if="FinalCtrl.user.country">{{FinalCtrl.user.country.name + ', ' + FinalCtrl.user.city}}</div>
+        <div class="user-card__networks"
+        ng-repeat="(network, link) in FinalCtrl.user.networks">
+            <span class="user-card__network-name">{{network}}</span>
+            <span class="user-card__network-link">{{link}}</span>
         </div>
     </div>
-    <div class="user-card__img"></div>
+    <img class="user-card__img"
+    ng-src="{{FinalCtrl.user.picture.src}}"></img>
 </div>
