--- a/client/dev.html
+++ b/client/dev.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="app/base/base.css">
     <link rel="stylesheet" href="app/pages/captcha/captcha.css">
     <link rel="stylesheet" href="app/pages/credentials/credentials.css">
+    <link rel="stylesheet" href="app/pages/final/user-card.css">
+    <link rel="stylesheet" href="app/pages/socials/socials.css">
     <!--endinject-->
 </head>
 <body ng-app="base">
@@ -19,9 +21,9 @@
 <script src="lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 <script src="lib/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="app/base/base.module.js"></script>
-<script src="app/pages/final/final.controller.js"></script>
 <script src="app/pages/socials/socials.controller.js"></script>
 <script src="app/pages/location/location.controller.js"></script>
+<script src="app/pages/final/final.controller.js"></script>
 <script src="app/pages/credentials/creds.controller.js"></script>
 <script src="app/pages/captcha/captcha.controller.js"></script>
 <script src="app/components/controls/controls.directive.js"></script>
