--- a/client/app/pages/captcha/captcha.html
+++ b/client/app/pages/captcha/captcha.html
@@ -13,5 +13,5 @@
         ng-click="CaptchaCtrl.validateCaptcha(captcha)"
     >
 </div>
-<input type="checkbox" ng-model="CaptchaCtrl.isCorrect"  required disabled>
-<span class="input__error-hint">Выберите со списка</span>
+<input type="checkbox" ng-model="CaptchaCtrl.isCorrect"  required disabled hidden>
+<span class="input__error-hint captcha__error-hint">Вы выбрали собачку. А надо - котика.</span>
