--- a/client/app/pages/credentials/credentials.html
+++ b/client/app/pages/credentials/credentials.html
@@ -1,14 +1,14 @@
 <label class="input__label">
     <input type="text"
-       placeholder="name"
+       placeholder="Имя"
        required
        ng-model="CredsCtrl.user.name">
-    <span class="input__error-hint">name</span>
+    <span class="input__error-hint"> - введите свое имя</span>
 </label>
 <label class="input__label">
     <input type="email"
-       placeholder="email"
+       placeholder="Электронная почта"
        required
        ng-model="CredsCtrl.user.email">
-    <span class="input__error-hint">email</span>
+    <span class="input__error-hint"> - в адресе должен быть символ "@"</span>
 </label>
