--- a/client/dev.html
+++ b/client/dev.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>LUN</title>
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
     <!--inject:css-->
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="app/base/base.css">
+    <link rel="stylesheet" href="app/components/checkbox/checkbox.css">
+    <link rel="stylesheet" href="app/components/controls/controls.css">
     <link rel="stylesheet" href="app/pages/captcha/captcha.css">
     <link rel="stylesheet" href="app/pages/credentials/credentials.css">
     <link rel="stylesheet" href="app/pages/final/user-card.css">
@@ -29,6 +32,7 @@
 <script src="app/components/controls/controls.directive.js"></script>
 <script src="app/components/controls/controls.controller.js"></script>
 <script src="app/services/server.service.js"></script>
+<script src="app/filters/translate.filter.js"></script>
 <script src="app/base/user.value.js"></script>
 <script src="app/base/base.directive.js"></script>
 <script src="app/base/base.controller.js"></script>
