--- a/client/dev.html
+++ b/client/dev.html
@@ -37,6 +37,7 @@
 <script src="app/base/base.directive.js"></script>
 <script src="app/base/base.controller.js"></script>
 <script src="app/templates.js"></script>
+<script src="app/run.js"></script>
 <script src="app/pages.constant.js"></script>
 <script src="app/index.router.js"></script>
 <script src="app/app.config.js"></script>
